<resources>
    <string name="app_name">Studdis</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //onBoarding texts
    <string name="skip">Пропустить</string>
    <string name="frag1">Добро пожаловать в \n
        Teach Smarter</string>
    <string name="frag1desc">Это первый шаг в дистанционное обучение для вашего ребенка, со всеми удобствами и легким интерфейсом</string>
    <string name="frag2">Все удобства для вашего обучения </string>
    <string name="frag2desc">Здесь вы найдете все удобства для онлайн обучения, такие как расписание, оценки, новости школы, чаты с учителями и учениками, и т.д. </string>
    <string name="frag3"> Отдельный раздел для родителей</string>
    <string name="frag3desc">Если вы родитель, для вас есть отдельный раздел где вы сможете наблюдать за учебным планом вашего ребенка, его оценками, и многое другое </string>
    <string name="frag4">Изучите все функции для удобства</string>
    <string name="frag4desc">Чтобы удобно пользоваться всеми функциями приложения, изучите все разделы как можно скорее.\n
        Добро пожаловать!</string>
    <string name="start">Начать</string>

    //
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Вика Маржова</string>
    <string name="nav_header_subtitle">Студент 3 курса</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_timetable">Расписание</string>
    <string name="tab_assessment">Оценка</string>
    <string name="tab_events">Мероприятия</string>



    <string name="name">Имя</string>
    <string name="surnameTV">Фамилия</string>
    <string name="statusTV">Кем вы являетесь?</string>
    <string name="newPass">Введите новый пароль</string>
    <string name="confirmNewPass">Подтвердите новый пароль</string>
    <string name="mailTV">Ваш почтовый адрес</string>
    <string name="saver">Сохранить</string>
    <string name="teach_smarterTV">Teach Smarter</string>
    <string name="login">Войти</string>
    <string name="forgotpass">Забыли пароль?</string>
    <string name="register">Регистрация</string>
    <string name="fingerTV">Приложите ваш палец \nчтобы войти в свой кабинет</string>
    <string name="questionanswer">Вопросы - Ответы</string>


    <string name="evItemDesc">Поездка в село Пригородное пройдет всеми классами, по два человека в ряд. Поездка предназначена для того чтобы все студенты знали что такое село есть на карте и оно красивое. \n\nПо всем вопросам обращаться к своим классным руководителям.</string>

</resources>
