<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/teachSmartTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teach_smarterTV"
            android:textAppearance="@style/teach_smartTVStyle"
            android:layout_marginTop="64dp"
            android:gravity="center_horizontal"
            android:fontFamily="Mode"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/mailIV"
            android:layout_below="@id/teachSmartTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/mailED"
            android:layout_alignTop="@id/mailED"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/mail_person_24px"
            />
        <EditText
            android:id="@+id/mailED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teachSmartTV"
            android:layout_marginTop="40dp"
            android:layout_alignLeft="@id/passED"
            android:layout_toRightOf="@id/mailIV"
            android:layout_marginEnd="40dp"
            android:hint="belobris@gmail.com"
            android:textAppearance="@style/belobris_gmStyle"
            />
        <EditText
            android:id="@+id/passED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mailED"
            android:layout_toRightOf="@id/passIV"
            android:layout_marginTop="8dp"
            android:hint="............."
            android:textAppearance="@style/registerTVStyle"
            android:layout_marginEnd="40dp"
            />
        <ImageView
            android:id="@+id/passIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="8dp"
            android:layout_alignBottom="@id/passED"
            android:layout_alignTop="@id/passED"
            android:src="@drawable/ic_lock_open_24px_outlined"
            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@id/passED"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_login_btn_back"
            />
        <TextView
            android:id="@+id/forgotEmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forgotpass"
            android:textAppearance="@style/loginTVStyle"
            android:gravity="center_horizontal"
            android:layout_below="@id/loginBtn"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/registerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotEmailTV"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textAppearance="@style/loginTVStyle"
            />
        <ImageView
            android:id="@+id/fingerIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerTV"
            android:src="@drawable/ic_fingerprint_24px_outlined"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            />
        <TextView
            android:id="@+id/finferTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerTV"
            android:layout_below="@id/fingerIV"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/loginTVStyle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/finferTV"
            android:text="@string/questionanswer"
            android:textAppearance="@style/loginTVStyle"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            />
    </RelativeLayout>

</ScrollView>